--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,18 +1,47 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 /* BannerPage.css */
+
 .page-container {
   display: flex;
+  min-height: 100vh;
   justify-content: center;
   align-items: center;
-  height: 100vh; /* Full viewport height */
+  max-width: 1200px;
+  margin: auto;
+  padding:0 50px;
+  position: relative;
+  box-sizing: border-box; /* Ensure padding doesn't affect width */
 }
+
+/* For screens wider than 768px (e.g., tablets) */
+@media (min-width: 768px) {
+  .page-container {
+    padding: 0 20px; /* Increase padding */
+  }
+}
+
 
 .banner {
   padding: 20px;
-  background-color: #007bff; /* Blue background */
+  background-color: #007bff;
   color: white;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 65vw;
+  max-height: 500px;
+  max-width: 700px;
+}
+.banner-container{
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 h1 {
@@ -22,8 +51,6 @@ h1 {
 
 
 .time {
-  height: 40%;
-  width: 80%;
   margin: 2.5% auto;
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
@@ -60,4 +87,29 @@ h1 {
 .heading{
   font-size: 2.5vw;
 
+}
+.dashboard-heading{
+  width: fit-content;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  display: flex;
+  height: fit-content;
+  align-items: center;
+
+}
+.dashboard-button{
+  background-color:lightgray;
+  border-radius:5px;
+  padding:5px;
+  height:fit-content;
+  margin: 0 10px;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.bar{
+  width: 35px;
+  height: 5px;
+  background-color: black;
+  margin: 3px 3px;
 }
